test/should-fail/vsgc289.f3
/*
 * Regression test VSGC-289 : Compiler allows incompatible types with anonymous functions
 *
 * @test
 * @compile/fail
 */

import java.lang.*;

var ab = function (a:Integer, b:Integer) : Integer {3;};
ab = function (a:Integer, b:Integer) : String { "" };
ab(12,12)
